--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
                 vertical-align: center;
                 font-family: monospace;
                 font-size: 18px;
+                position: relative;
+            }
+
+            .pixel-index {
+                font-size: 10px;
+                display: inline-block;
+                position: absolute;
+                top: 2px;
+                right: 2px;
+                color: #999;
+            }
+
+            td.pixel {
+                width: 5px;
+                height: 5px;
+                border: 0;
             }
         </style>
     </head>
